[gd_scene load_steps=8 format=2]

[ext_resource path="res://NPC/old_man.png" type="Texture" id=1]
[ext_resource path="res://Areas/PlayerDetection.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPC/Enemy.gd" type="Script" id=3]
[ext_resource path="res://NPC/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Areas/Hurtbox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 10.5 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 10.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="PlayerDetection" parent="." instance=ExtResource( 2 )]
position = Vector2( 17, 15 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16.5, 18.5 )
shape = SubResource( 1 )

[node name="WanderController" parent="." instance=ExtResource( 4 )]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 17, 25 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 15 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( 17, 13 )
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="WanderController"]
[editable path="Hurtbox"]
